doing jank shit with css; fixing gap between dropdown and input

--- a/style.css
+++ b/style.css
@@ -116,4 +116,17 @@ header p.description, .title {
   margin-left: 20px;
 }
 
+#skillsPersonHas {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
+#wantsToLearn {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#wantsToHire {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
